# AutoTasks

./: README.md  exportCSV.py  pyproject.toml  requirements.txt  sysinfo.py  tech_info.py  utils.py  weather_report.py
.github/workflows/: daily_sign.yml  push_info.yaml  python-app.yml  weather_report.yml
app/: tech_info.py  utils.py  weather_report.py
